<resources>
    <string name="local_notification">本地通知</string>
    <string name="new_local_notification">新建本地通知</string>
    <string name="modify_local_notification">修改本地通知</string>
    <string name="add_local_notification">新建</string>
    <string name="create_local_notification">添加</string>
    <string name="update_local_notification">修改</string>
    <string name="clear_local_notification">清除</string>
    <string name="local_notification_title">标题</string>
    <string name="local_notification_content">内容</string>
    <string name="local_notification_ticker">提示</string>
    <string name="local_notification_datetime">时间</string>
    <string name="local_notification_repeatingnum">重复数</string>
    <string name="local_notification_repeatingunit">重复单位</string>
    <string name="local_notification_repeatinginterval">重复间隔</string>
    <string name="local_notification_specialday">节日</string>
    <string name="year">年</string>
    <string name="lunarYear">年(阴历)</string>
    <string name="month">月</string>
    <string name="lunarMonth">月(阴历)</string>
    <string name="day">日</string>
    <string name="lunarDay">日(阴历)</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="repeatingNum">重复数</string>
    <string name="repeatingUnit">重复单位</string>
    <string name="repeatingInterval">重复间隔</string>
    <string name="specialDay">节日</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="ticker">提示</string>
    <string name="flags">Flags</string>
    <string name="defaults">Defaults</string>
    <string name="smallIconDrawable">小图标</string>
    <string name="largeIconDrawable">大图标</string>
    <string name="soundDrawable">声音</string>
    <string name="playVibrate">振动</string>
    <string name="playLights">闪光</string>
    <string name="playSound">声响</string>
    <string name="screenOn">开屏</string>
    <string name="layoutId">自定义样式</string>
    <string name="layoutTitleId">自定义标题</string>
    <string name="layoutContentId">自定义内容</string>
    <string name="layoutIconId">自定义小图标</string>
    <string name="layoutIconDrawableId">自定义大图标</string>
    <string name="notificationSetting">通知设置</string>
    <string name="builderSetting">通知样式设置</string>
    <string name="repeatingNumHint">-1表示一直重复</string>
    <string name="needed">必填</string>
    <string name="search">搜索</string>
    <string name="search_text">根据通知ID或标题内容查找...</string>
    <string name="clearlog">清除日志</string>
    <string name="show_card_message">展示插屏</string>
    <string name="edalias">Tags/Alias/Excusive Alias</string>
    <string name="edaliasType">Alias Type</string>
    <string name="app_name">Smart Pricing</string>
    <string name="again_press_exite_str">Press the return key to close the program again!</string>
    <string name="consumed_tab">消费查询</string>
    <string name="recharge_tab">充值</string>
    <string name="home_tab">无</string>
    <string name="DIYpackage_tab">DIY套餐</string>
    <string name="mine_tab">个人中心</string>
    <string name="tutorial_name">Smart Pricing, built for you</string>
    <string name="tutorial_context_one">In order for you to get the most out of the app and for us to to improve our services, we may use information from your device.  </string>
    <string name="tutorial_context_two">Data such as your location, information about the quality and use of your communications services, apps on your device as well as how you use My Vodafone help us improve our service and tailor recommendations to you.  You can change what information is collected and used, as well as control the way we communicate with you at any time by visiting settings.</string>
    <string name="tutorial_context_three">By tapping on \'OK\' you agree to allow Vodafone to collect your data and agree to our&#160;</string>
    <string name="tutorial_context_four">Privacy policy</string>
    <string name="tutorial_context_five">&#160;and&#160;</string>
    <string name="tutorial_context_six">T&#038;C\'s.</string>
    <string name="cancle_btn">Cancel</string>
    <string name="ok_btn">Ok</string>
    <string name="login_name_one">Login to</string>
    <string name="login_name_two">Smart Pricing</string>
    <string name="login_user_name">Username</string>
    <string name="hint_user_name">e.g.jhon_lewis88</string>
    <string name="login_Password">Password</string>
    <string name="hint_Password">Your saved password</string>
    <string name="login_btn">Log in</string>
    <string name="pwd_error">You typed an invalid password</string>
    <string name="enter_five_error">Sorry your account is now locked. You\'ve entered your details incorrectly more than 5 times. You will need to reset your account.</string>
    <string name="reset_account_btn">Reset your account now</string>
    <string name="forgotten_btn">Forgotten password</string>
    <string name="login_name_three">Not registered with</string>
    <string name="login_name_four">Smart Pricing?</string>
    <string name="register_btn">Register now</string>
    <string name="forgtten_title">Reset the password</string>
    <string name="confim_pwd">Confirm password</string>
    <string name="check">check</string>
    <string name="new_pwd">New password</string>
    <string name="send_code">send code</string>
    <string name="enter_code">Enter code</string>
    <string name="your_number">Enter your Number</string>
    <string name="tip_next">Next tip</string>
    <string name="tip_start">Get started</string>
    <string name="tip_close">Close</string>
    <string name="tip_one_one">Tip 1 of 4</string>
    <string name="tip_one_two">Good morning,Alice</string>
    <string name="tip_one_three">Welcome to My Vodafone</string>
    <string name="tip_one_four">No data spend</string>
    <string name="tip_one_five">When using this app, you won\'t spend any of your data allowance.</string>
    <string name="tip_two_one">Tip 2 of 4</string>
    <string name="tip_two_onee">Tip 3 of 4</string>
    <string name="tip_two_oneee">Tip 4 of 4</string>
    <string name="tip_two_two">Service switcher</string>
    <string name="tip_two_three">If you have more than one service on your account you can tap the service switcher to choose another.  You can also use the side menu to access your services(top right).</string>
    <string name="tip_three_one">Usage dial</string>
    <string name="tip_three_two">The dial shows your usage.  You can switch between data, calls &#038; texts.  Tap the + sign to add more data or minutes.</string>
    <string name="tip_four_one">Current spend</string>
    <string name="tip_four_two">Finally, to see your current spend and view your bills you should take a look at the bottom of the screen.</string>
    <string name="terms">Terms &#038; Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="argee_title">©Copyright 2015 My Vodafone 5.0.1</string>
    <string name="argee_context">1. Licence</string>
    <string name="argee_context1">Lorem ipsum dolor sit amet, consect etur adipiscing elit. Integer sit amet iaculis justo. Integer vestibulum.</string>
    <string name="argee_context2">2. Charges</string>
    <string name="argee_context3">When using this app you will not spend any of your data allowance.</string>
    <string name="argee_context4">3. Exclusion of warranties and</string>
    <string name="argee_context44">limitation of liability</string>
    <string name="argee_context5">Aliquam lobortis rhoncus elit ac max imus. Nam vestibulum ipsum ut ligula lacinia, condimentum scelerisque dui.</string>
    <string name="argee_context6">4. Lorem ipsum</string>
    <string name="argee_context7">Aliquam lobortis rhoncus elit ac max imus. Nam vestibulum ipsum ut ligula lacinia, condimentum scelerisque dui.</string>
    <string name="argee_context8">5. Lorem ipsum</string>
    <string name="argee_context9">Aliquam lobortis rhoncus elit ac max imus. </string>
    <string name="privacy_context0">1. How Vodafone will use the information</string>
    <string name="privacy_context00">collected (or shared)</string>
    <string name="privacy_context1">The purpose of collecting this information is to help improve Vodafone networks and services. We analyse the collected information to diagnose connectivity, coverage or connection quality problems, understand connectivity needs from the usage of mobile data, Wi-Fi and applications, and use such insights to make improvements to our network and services.</string>
    <string name="privacy_context2">The collected information helps us understand, for example, where are the areas of weak coverage so that we can improve it, to determine whether poor performance might be caused by the movement of the device in a certain direction or due to some other reason, such as device type or the battery state or application usage. Through the collected information we understand better how to improve device and network data efficiency, how different device types,applications and Wifi and mobile usage patterns impact data volumes and we evaluate the performance of different devices in our network and diagnose phone related problems as well as other such uses.</string>
    <string name="privacy_context3">We do not sell or share the collected information with other third parties than those who process this information on our behalf.</string>
    <string name="privacy_context4">2. Some basic privacy facts</string>
    <string name="privacy_context41">•  numbers you dial or that dial you</string>
    <string name="privacy_context42">•  any content of your communications</string>
    <string name="privacy_context43">•  content, sender or receiver information of</string>
    <string name="privacy_context433">text messages on your device</string>
    <string name="current_text">Current spend and bills</string>
    <string name="products_text">Your products and services</string>
    <string name="offer_extras">Offers and extras for you</string>
    <string name="travelling">Travelling abroad</string>
    <string name="support_text">24/7 support</string>
    <string name="store_locator">Store locator</string>
    <string name="network">Network</string>
    <string name="speed_checker">Speed checker</string>
    <string name="network_usage">Network usage</string>
    <string name="broadband_finder">Broadband finder</string>
    <string name="wifi_finder">Wi-Fi finder</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="time_out_dialog">Your last chat session has timed out</string>
    <string name="restart_chat">Restart new chat</string>
    <string name="start_chat">Start new chat</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="want_to_exchange">Are you sure to redeem?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="select_from_album">select from album</string>
    <string name="take_pictures">take pictures</string>
    <string name="cancel">cancel</string>
    <string name="settings_version">Version</string>
    <string name="setting_Would_you_like_to_change_the_app_language_to">Would you like to change the app\nlanguage to </string>
    <string name="setting_Cancel">Cancel</string>
    <string name="settings_change_to">change to</string>
    <string name="setting_Are_you_sure_you_want_to_turn_off_sales">Are you sure you want to turn off notifications?</string>
    <string name="setting_Are_you_sure_you_want_to_turn_off_sales2">You will stop receiving push notifications </string>
    <string name="settings_Yes_turn_off">Yes,turn off</string>
    <string name="setting_Not_now">Not now</string>
    <string name="want_to_log_out">You will not be able to check the balance \n or your data allowance.</string>
</resources>