<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@color/half_more_transparency"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/back_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:src="@drawable/delete" />
            <TextView
                android:id="@+id/current_spend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/current_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/current_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />
            
            <TextView
                android:id="@+id/usage_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/usage_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="Usage history"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/products_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/products_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/products_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/offer_extras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/offer_extras"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/offer_extras"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/travelling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/travelling_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/travelling"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/support_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/support_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/support_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/store_locator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/store_locator_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/store_locator"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/network_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/network_choose_icon"
                    android:drawableLeft="@drawable/network_icon"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/network"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/network_choose_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/down_arrows" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/network_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/speed_checker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/network_item"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/speed_checker"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/network_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/network_item"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/network_usage"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/broadband_finder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/network_item"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/broadband_finder"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wifi_finder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/network_item"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/wifi_finder"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/notifications_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/notifications"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/settings_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/version"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/settings_version"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/log_out_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>