<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    

    <Button
        android:id="@+id/select_from_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/green_btn_selected_status"
        android:text="@string/select_from_album"
        android:textSize="@dimen/text_size_two"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/take_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/red_btn_selected_status"
        android:textSize="@dimen/text_size_two"
        android:text="@string/take_pictures"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="20dip"
        android:background="@drawable/gray_btn_bg"
        android:textSize="@dimen/text_size_two"
        android:text="@string/cancel"
        android:textColor="@color/white" />

</LinearLayout>