<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/support_gray_more"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="10dp"
        android:src="@drawable/delete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/sige_in_pay"
        android:text="@string/want_to_exchange"
        android:textColor="@color/white"
        android:textSize="27dp" />

    <TextView
        android:id="@+id/dialog_yes"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/red_bg"
        android:gravity="center"
        android:text="@string/dialog_yes"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_no"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/login_btn_text"
        android:gravity="center"
        android:text="@string/dialog_no"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>