<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#333333"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="@string/setting_Would_you_like_to_change_the_app_language_to"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/change_to"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/settings_resetpin_back_red"
            android:text="@string/settings_change_to"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/settings_person_btn_selected_status"
            android:text="@string/setting_Cancel"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    </LinearLayout>
